<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intro_3">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/permission"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:id="@+id/iconimage"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissiontitle"
        android:paddingBottom="10dp"
        android:id="@+id/title"
        android:layout_toEndOf="@+id/iconimage"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/acrade"
        android:textSize="36sp"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:id="@+id/cameralayout">
    <CheckBox
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:id="@+id/cameracheck"
        android:button="@null"
        android:background="@drawable/checkbox"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/white"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:fontFamily="@font/acrade"
        android:text="@string/CameraPermission"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:id="@+id/locationlayout">
        <CheckBox
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:id="@+id/locationcheck"
        android:button="@null"
        android:background="@drawable/checkbox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:fontFamily="@font/acrade"
            android:text="@string/LocationPermission"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:id="@+id/microphonelayout">
        <CheckBox
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/microphonecheck"
            android:button="@null"
            android:background="@drawable/checkbox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:fontFamily="@font/acrade"
            android:text="@string/microphonepermission"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:id="@+id/storagelayout">
        <CheckBox
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/storagecheck"
            android:button="@null"
            android:background="@drawable/checkbox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:fontFamily="@font/acrade"
            android:text="@string/StoragePermission"/>
    </LinearLayout>
</LinearLayout>
</RelativeLayout>